[workspace]
members = [
    "byteswap",
    "deploy",
    "extract_boot_code",
    "game",
    "game-pipeline",
    "n64-alloc",
    "n64-macros",
    "n64-math",
    "n64-profiler",
    "n64-sys",
    "n64-types",
    "n64",
]

default-members = ["deploy"]
resolver = "2"

[profile.dev.package."*"]
opt-level = 2

[profile.dev.build-override]
opt-level = 2