[workspace]
members = [
    "byteswap",
    "deploy",
    "extract_boot_code",
    "game-pipeline",
    "game",
    "n64-alloc",
    "n64-macros",
    "n64-math",
    "n64-profiler_macro",
    "n64-profiler",
    "n64-sys",
    "n64-types",
    "n64",
    "vu-emu",
    "vu_emu_macro",
]

default-members = ["deploy"]
resolver = "2"

[profile.dev.package."*"]
opt-level = 2

[profile.dev.build-override]
opt-level = 2