[package]
name = "game-pipeline"
version = "0.1.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_into = "1"
blend = "0.6"
hound = "3"
image = { version = "0.24", default-features = false }
itertools = "0.10"
meshopt = "0.1"
n64-math = { path = "../n64-math" }
png = { version = "0.17", default-features = false }
tiled = { git = "https://github.com/JoNil/rs-tiled.git" }
zerocopy = "0.6"