[package]
name = "game-pipeline"
version = "0.1.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_into = "1"
blend = "0.8"
gltf = "1"
hound = "3"
image = { version = "0.24", default-features = false }
itertools = "0.10"
meshopt = "0.1"
n64-math = { path = "../n64-math" }
png = { version = "0.17", default-features = false }
tiled = { git = "https://github.com/JoNil/rs-tiled.git", rev = "8fc09b8d63defb28ecf87b678785cb01292d575c" }
zerocopy = "0.6"