[package]
name = "game"
version = "0.1.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.9", default-features = false }
n64 = { path = "../n64" }
n64-math = { path = "../n64-math" }
spin = "0.5"
zerocopy = "0.3"

[target.'cfg(target_vendor = "nintendo64")'.dependencies]
n64-alloc = { path = "../n64-alloc" }
n64-sys = { path = "../n64-sys" }

[build-dependencies]
game-pipeline = { path = "../game-pipeline" }
