[package]
name = "game"
version = "0.1.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.12", default-features = false }
libm = "0.2"
n64 = { path = "../n64" }
n64-macros = { path = "../n64-macros" }
n64-math = { path = "../n64-math" }
n64-profiler = { path = "../n64-profiler" }
strum = { version = "0.24", default-features = false }
strum_macros = { version = "0.24", default-features = false }
zerocopy = "0.6"

[target.'cfg(target_vendor = "nintendo64")'.dependencies]
n64-alloc = { path = "../n64-alloc" }
n64-sys = { path = "../n64-sys" }

[build-dependencies]
game-pipeline = { path = "../game-pipeline" }
