[package]
name = "game"
version = "0.1.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game-derive = { path = "../game-derive" }
hashbrown = { version = "0.13", default-features = false }
libm = "0.2"
n64 = { path = "../n64" }
n64-math = { path = "../n64-math" }
strum = { version = "0.24", default-features = false }
strum_macros = { version = "0.24", default-features = false }
zerocopy = "0.6"

[build-dependencies]
game-pipeline = { path = "../game-pipeline" }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "main_benchmark"
harness = false