[package]
name = "n64-math"
version = "0.1.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9"
zerocopy = "0.6"
glam = { version = "0.20", default-features = false, features = ["libm"] }