[package]
name = "n64-sys"
version = "0.1.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n64-math = { path = "../n64-math" }
n64-types = { path = "../n64-types" }

[build-dependencies]
mipsasm-rsp = "1.2"