[package]
name = "n64"
version = "0.1.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1"
n64-math = { path = "../n64-math" }
n64-types = { path = "../n64-types" }

[target.'cfg(not(target_vendor = "nintendo64"))'.dependencies]
futures-executor = "0.3"
glsl-to-spirv = "0.1"
lazy_static = "1.4.0"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git" }
winit = "0.21"
zerocopy = "0.2"

[target.'cfg(target_vendor = "nintendo64")'.dependencies]
n64-sys = { path = "../n64-sys" }
