[package]
name = "n64"
version = "0.1.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned = "0.4"
assert_into = "1"
libm = "0.2"
n64-macros = { path = "../n64-macros" }
n64-math = { path = "../n64-math" }
n64-profiler = { path = "../n64-profiler" }
n64-types = { path = "../n64-types" }
spin = "0.9"
strum = { version = "0.24", default-features = false }
strum_macros = { version = "0.24", default-features = false }
zerocopy = "0.6"

[target.'cfg(not(target_vendor = "nintendo64"))'.dependencies]
cpal = "0.14"
futures-executor = "0.3"
naga = { version = "0.10", features = ["glsl-in", "spv-out"] }
once_cell = "1"
rubato = { git = "https://github.com/JoNil/rubato.git" }
wgpu = { version = "0.14", features = ["spirv"] }
winit = "0.27"

[target.'cfg(target_vendor = "nintendo64")'.dependencies]
n64-alloc = { path = "../n64-alloc" }
n64-sys = { path = "../n64-sys" }
vu-emu = { path = "../vu-emu", default-features = false }