[package]
name = "vu_emu_macro"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Nilsson <lord.jonil@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"